trunk/app/webroot/css/style.css
/* ... */
	
	div#wrapper div.actions ul ul.filter:hover a {
		/*background-color: #486680;
		color: #fff;*/
	}

/*
	div#wrapper div.actions ul ul.filter li:hover div.filter_menu {
		display: block;
		width: 200px;
		top: -270px;
		right: 45px;
		height: 275px;
		overflow: hidden;
		line-height: 14px;
		position: absolute;
		background: #486680;
		margin: 0;
		text-align: left;
		border-color: #000000;
		-moz-border-radius: 5px; -webkit-border-radius: 5px;
	}
*/
	div#wrapper div.actions ul ul.filter li:hover div.filter_menu {
		display: block;
		position: absolute;
		width: 200px;
		top: 5px;
		right: 55px;
		
		/* height: 275px; no scrollable menu */
		overflow: hidden;
		line-height: 14px;
		background: #486680;
		margin: 0;
		text-align: left;
		border-color: #000000;
		-moz-border-radius: 5px; -webkit-border-radius: 5px;
	}
	div#wrapper div.actions ul ul.filter li:hover span,
	div#wrapper div.actions ul ul.filter li:hover span a {
		color: #fff;
	}
	div#wrapper div.actions ul ul.filter div.filter_menu ul {
		/* padding: 30px 0; */
		padding: 0;
	}
	div#wrapper div.actions ul ul.filter div.filter_menu ul li {
		width: 200px;
		margin: 0;
/*
		padding-left: 10px;
		padding-right: 10px;
		w\idth: 180px;
*/
		border: 0;
		border-top: 1px dotted #ccc;
		background: none;
		color: #999;
		/* background-image: url("../img/btnBack.png"); */
	}
	div#wrapper div.actions ul ul.filter div.filter_menu ul li:hover {
		/* background-image: url("../img/btnBackSel.png"); */
	}
	
	div#wrapper div.actions ul ul.filter div.filter_menu ul li a {
		color: #fff;
		display: none;
		-moz-border-radius: 0; -webkit-border-radius: 0;
	}

	div#wrapper div.actions ul ul.filter div.filter_menu ul li.count_0 {
		border: 0;
		margin: 0;
		-moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px;
	}
	div#wrapper div.actions ul ul.filter div.filter_menu ul li.count_last_line {
		margin: 0;
		-moz-border-radius-bottomleft: 5px; -webkit-border-bottom-left-radius: 5px;
		-moz-border-radius-bottomright: 5px; -webkit-border-bottom-right-radius: 5px;
	}
	div#wrapper div.actions ul ul.filter div.filter_menu ul li a {
		background-color: #486680;
		line-height: 18px;
		float: none;
		display: block;
		text-transform: none;
		font-weight: normal;
		font-size: 11px;
		cursor: pointer;
	}
	div#wrapper div.actions ul ul.filter div.filter_menu ul li a:hover {
		background-color: #293B49;
		color: #fff;
	}
	
	div#wrapper div.actions ul ul.filter ul li a.not_allowed {
		color: #999;
		cursor: not-allowed;
	}

/*===========================================================*
	-=header menu/user 
*===========================================================*/
ul#root_menu_for_header,
ul#main_menu_for_header {
	position: absolute;
	right: 15px;
	padding: 0; 
	margin: 0;
	list-style: none;
	border: none;
}

/*===========================================================*
	-=position for toolbox rows 
*===========================================================*/
ul#root_menu_for_header { top: 0; }
ul#main_menu_for_header { top: 45px; }

/*===========================================================*
	-=paired / shared selectors for toolbox 
*===========================================================*/
ul#root_menu_for_header li,
ul#root_menu_for_header li a,
ul#main_menu_for_header li,
ul#main_menu_for_header li a {
	display: block; 
	float: left;
	width: 40px;
	height: 40px;
	margin-right: 5px;
	text-indent: -10000px;
	text-decoration: none;
}

#root_menu_for_header li:hover{
	background-image: url("../img/icons/toolbox_top_bk01.png");
} 

#main_menu_for_header li:hover{
	background-image: url("../img/icons/toolbox_bot_bk01.png");
} 

ul#root_menu_for_header li.not_allowed,
ul#main_menu_for_header li.not_allowed {
	color: #aaa;
}


/* others here */		
p#user_for_header {
	position: absolute;
	
	top: 20px; right: 0;
	padding: 0; 
	margin: 0 30px 0 0;
	
	font-size: 14px;
	/* font-weight: bold; */
	color: #fff;
}

p#user_for_header span {
	font-size: 11px;
	font-weight: normal;
	color: #ccc;
}


/*===========================================================*
	-=menus
*===========================================================*/
div#menu {
	background: none;
	border: 0;
	border-bottom: 1px solid #243340;
	padding: 0;
	min-height: 50px;
	margin: 10px 10px 0 10px;
}

div.menu.level_0 {
	position: relative;
	z-index: 20;
	
	list-style-type: none;
	padding: 0;
	min-height: 40px;
	margin: 0 10px 0 0;
	
	/*
	background-color: #374D61;
	
	-moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px;
	-moz-border-radius-topright: 5px; -webkit-border-top-right-radius: 5px;
	
	border-color: #374D61;
	border-bottom: none;
	*/
	
	border: 0;
	background: 0;
	
	font-size: 11px;
	line-height: 1.2em;
	color: #ccf;
}
div.menu.level_0 span {
	color: #fff;
	/* font-weight: bold; */
	font-size: 14px;
	text-decoration: none;
	/* text-transform: uppercase; */
}
div.menu.level_0 span.without_summary {
	display: block;
	/* margin-top: 6px;
	margin-bottom: 6px; */
	margin-bottom: 14px;
}

/* -=main menu above the large content area */
div.menu ul {
	float: left;
	margin: 10px 0 0 0;
	padding: 0;
	list-style: none;
	background: #486680 url(../img/count_0_bk.png) right top no-repeat;
}
div.menu ul li {
	position: relative;
	float: left;
	height: 28px;
	padding: 8px 10px 5px 25px;
	background: #374D61 url(../img/breadcrumb_separator.png) left center no-repeat;
}

div.menu ul li.count_0 { 
	background-color: transparent;
}

div.menu ul li.root,
div.menu ul li.count_0.root {
	background: #293B49 url(../img/icons/main_menu_root_0_bk_arrow_01.png) no-repeat right center;
	margin-top: -10px;
	margin-right: -13px;
	height: 40px;
	padding: 5px 30px 5px 10px;
	z-index: 10;
	-moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px;
}
div.menu ul.total_count_0 li.root,
div.menu ul.total_count_1 li.root {
	background: #293B49 url(../img/icons/main_menu_root_0_bk_arrow.png) no-repeat right center;
}
/* ... */

